skillz-staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moodle
  namespace: skillz-staging
spec:
  rules:
  - host: skillz-staging.local
    http:
      paths:
      - backend:
          service:
            name: moodle
            port:
              number: 8080
        path: /
        pathType: Prefix
